
  o The predict() method for "bttree" objects works again correctly for
    type = "parameter" (previously called type = "worth") and type = "rank".
    Thanks to Heather Turner for pointing out the problem.

  o node_btplot() used to fail for worth=FALSE or ref=<character> but works
    now correctly again. Thanks to Heather Turner for pointing out the problem.

  o node_regionplot() now also works correctly on devices with a default white
    (rather than transparent) background such as png or jpeg.

  o node_* panel functions gained bg = "white" argument to enable different
    background filling color.


Changes in Version 0.15-1

  o The recently added mpttree() function is now accompanied by a working
    paper, see citation("psychotree") or ?mpttree for details.

  o Properly imported grDevices in NAMESPACE.

  o Basil Abou El-Komboz changed his name to Basil Komboz.


Changes in Version 0.15-0

  o New function mpttree() and visualization function for model-based
    recursive partitioning of multinomial processing tree (MPT) models. These
    functions are somewhat experimental, and their user interface might change
    in future releases.


Changes in Version 0.14-0

  o Internals of package psychotree completely reorganized to employ
    the recent additions and changes in psychotools (>= 0.3-0) and
    to use the new partykit (>= 0.2-0) implementation of the mob()
    function (rather than the old party implementation).

  o The handling of argument 'ref' when producing a region/effect
    plot was changed. Whereas in the previous implementation,
    the restriction specified in this argument was applied to
    the cumulative absolute item threshold parameters, it now is
    applied to the absolute item threshold parameters.

  o New panel-generating visualization functions 'node_profileplot'
    and 'node_regionplot' have been added which replace the old 
    functions 'node_raschplot' and 'node_effects'. 


Changes in Version 0.13-0
